--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 <body style="background-color: #fff7dc">
     <h1 class="center">Jacob's Pies</h1>
     <div class="center space-around">
-    <h4>home</h4>
-    <h4>gallery</h4>
-    <h4>order</h4>
-    <h4>team</h4>
-    <h4>contact us</h4>
-
-
+        <h4>home</h4>
+        <h4>gallery</h4>
+        <h4>order</h4>
+        <h4>team</h4>
+        <h4>contact us</h4>
     </div>
+
+    <div class="center">  
+        <img src="photos/pie-1.jpeg">
+    </div>
+    <div class="center">        
+        <p>Hi! I'm Jacob. I like to make pies!</p>
+    </div>
+
+    <div class="center">        
+            <button class="button">Order Now</button>
+        </div>
+    
 
 
 </body>
