adding all the nav links and styling link colors

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body style="background-color: #fff7dc">
     <h1 class="center">Jacob's Pies</h1>
     <div class="center space-around">
-        <h4>home</h4>
-        <h4>gallery</h4>
-        <h4>order</h4>
-        <h4>team</h4>
-        <h4>contact us</h4>
+        <h4><a href="index.html">home</a></h4>
+        <h4><a href="gallery.html">gallery</a></h4>
+        <h4><a href="order.html">order</a></h4>
+        <h4><a href="team.html">team</a></h4>
+        <h4><a href="contact.html">contact us</a></h4>
     </div>
 
     <div class="center">  
