setting up email

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,16 @@
             <h4><a href="contact.html">contact us</a></h4>
     </div>
 
+    <div class="center">
+            <p>Questions or concerns? Want to leave a review? We'd be happy to hear from you! Email us at 
+                    <a href="sytsmajd@gmail.com">sytsmajd@gmail.com</a>
+            </p>
+    
+        </div>
+        <div class="center">        
+                <button type="button" class="button"><a href="sytsmajd@gmail.com"></a>Email</button>
+            </div>
+
 </body>
 
 </html>
