meet the team page with stub info

--- a/team.html
+++ b/team.html
@@ -15,7 +15,44 @@
             <h4><a href="team.html">team</a></h4>
             <h4><a href="contact.html">contact us</a></h4>
     </div>
-    <p>this page is still a work in progress!</p>
+    <h4 class="center">Meet Our Team!</h4>
+    <div class="center">
+
+        <div class="col-width center">
+            <div>
+                <img class="pfp" src="photos/sarah.JPG">
+
+            </div>
+                <div class="title">
+                        <h4 class="title">Jacob</h4>
+                </div>
+                <div class="bio">
+                        <p>I'm Jacob! I bake the pies.</p>
+                </div>
+
+        </div>
+        <div class="col-width center">
+                <img class="pfp" src="photos/sarah.JPG">
+                <div class="title">
+                        <h4 class="title">Hannah</h4>
+                </div>
+                <div class="bio">
+                        <p>I'm Hannah. I coordinate pie orders!</p>
+                </div>
+        </div>
+
+        <div class="col-width center">
+                <img class="pfp" src="photos/sarah.JPG">
+                <div class="title">
+                        <h4 class="title">Sarah</h4>
+                </div>
+                <div class="bio">
+                        <p>I'm Sarah! I designed the website for Jacob's Pies.</p>
+                </div>
+        </div>
+
+
+    </div>
 
 </body>
 
