alt text for pie photo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="center">  
-        <img src="photos/pie-1.jpeg">
+        <img src="photos/pie-1.jpeg" alt="Photo of a pie">
     </div>
     <div class="center">        
         <p>Hi! I'm Jacob. I like to make pies!</p>
