--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
             <h4><a href="team.html">team</a></h4>
             <h4><a href="contact.html">contact us</a></h4>
     </div>
-    <p>this page is still a work in progress!</p>
+    <p class="center">this page is still a work in progress!</p>
 
 </body>
 
