making button go to order page

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     </div>
 
     <div class="center">        
-            <button class="button" >Order Now</button>
+        <a href="order.html"><button type="button" class="button">Order Now</button></a>
         </div>
+
+
     
 
 
