fixing email link and button

--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,15 @@
     </div>
 
     <div class="center">
-            <p>Questions or concerns? Want to leave a review? We'd be happy to hear from you! Email us at 
-                    <a href="sytsmajd@gmail.com">sytsmajd@gmail.com</a>
+            <p class="center">Questions or concerns? Want to leave a review? We'd be happy to hear from you! Email us at 
+                    <a href="mailto:sytsmajd@gmail.com">sytsmajd@gmail.com</a>
             </p>
     
         </div>
         <div class="center">        
-                <button type="button" class="button"><a href="sytsmajd@gmail.com"></a>Email</button>
+                <!-- <button type="button" class="button"><a href="sytsmajd@gmail.com"></a>Email</button> -->
+                <a href="mailto:sytsmajd@gmail.com"><button type="button" class="button">Email</button></a>
+
             </div>
 
 </body>
