adding styling for reviews

--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,32 @@
             <h4><a href="contact.html">contact us</a></h4>
     </div>
     <p class="center">this page is still a work in progress!</p>
+    <div class="center">
+        <h4>Photos</h4>
+
+    </div>
+    <div class="reviews">
+        <h4>Reviews</h4>
+        <div class="reviews">
+            <p>"yum yum yum! we ordered the apple pie and it was perfect for fall"</p>
+        </div>
+        <div class="reviews">
+            <p>"I loved it!"</p>
+        </div>
+        <div class="reviews">
+            <p>"Delicious!"</p>
+        </div>
+        <div class="reviews">
+        
+            <p>"Amazing. i cant wait to order again. thank you for the delicious pie and the great customer service. best 
+                pie ive  had in so long. i cant wait to order this for the holidays too. yum yum!"
+            </p>
+        </div>
+
+        </div>
+
+
+    </div>
 
 </body>
 
