adding photos and reviews

--- a/gallery.html
+++ b/gallery.html
@@ -15,9 +15,35 @@
             <h4><a href="team.html">team</a></h4>
             <h4><a href="contact.html">contact us</a></h4>
     </div>
-    <p class="center">this page is still a work in progress!</p>
-    <div class="center">
+    <div class="reviews">
         <h4>Photos</h4>
+<div class="row">
+    <div class="column">
+        <img src="photos/pie-1.jpeg">
+        <img src="photos/pie-1.jpeg">
+        <img src="photos/pie-1.jpeg">
+        <img src="photos/pie-1.jpeg">
+    </div>
+
+    <div class="column">
+            <img src="photos/pie-1.jpeg">
+            <img src="photos/pie-1.jpeg">
+            <img src="photos/pie-1.jpeg">
+            <img src="photos/pie-1.jpeg">
+        </div>
+
+        <div class="column">
+                <img src="photos/pie-1.jpeg">
+                <img src="photos/pie-1.jpeg">
+                <img src="photos/pie-1.jpeg">
+                <img src="photos/pie-1.jpeg">
+            </div>
+        <div class="column">
+                <img src="photos/pie-1.jpeg">
+                <img src="photos/pie-1.jpeg">
+                <img src="photos/pie-1.jpeg">
+                <img src="photos/pie-1.jpeg">
+            </div>
 
     </div>
     <div class="reviews">
