fixing a space char in email

--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="center">
-            <p class="center">Questions or concerns? Want to leave a review? We'd be happy to hear from you! Email us at 
-                    <a href="mailto:sytsmajd@gmail.com">sytsmajd@gmail.com</a>
+            <p class="center">Questions or concerns? Want to leave a review? We'd be happy to hear from you! Email us at  
+                    <a href="mailto:sytsmajd@gmail.com">&nbsp;sytsmajd@gmail.com</a>
             </p>
     
         </div>
